--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
             Hi there, my name's Jack! 
 
             I'm a Data Scientist who simply loves to draw insights from data and use them to solve challenging business problems. 
+          </p>
+
+          <p class="text-adjust mt-4 mb-4">
             Also an ML Engineer who enjoys building functional ML applications, be it internal or external tooling to support an organisation's technical requirements.
+          </p>
+
+          <p class="text-adjust mb-4">
             It is a passion of mine to study and implement best practices in every project I have come across, especially so when it comes to upholding quality attributes 
             such as Scalability, Reliability, Maintainability, and Observability. 
           </p>
@@ -134,8 +140,10 @@
             <p class="text-adjust">
               Started out as a classically trained wet-lab biologist during the academic days, 
               then soon became massively interested in leveraging AI to empower research in the applied space.
+            </p>
+            <p class="text-adjust">
               Eventually realized the importance of proper ML infrastructure for end-to-end data science works.
-              And thus, I became a major advocate of creating efficient data and ML pipelines to make the lives of my fellow colleagues better by streamlining routine processes.  
+              And thus, I became a major advocate of creating efficient data and ML pipelines to make the lives of my fellow colleagues better by streamlining routine processes.
             </p>
           </div>
         </div>
@@ -149,9 +157,8 @@
 
         <div class="section-title">
           <h2>Fun Facts</h2>
-          <p class="text-adjust">Also an avid reader of several subject matters spanning from Artificial Intelligence, 
-            ML Engineering, ML Operations, Web Development, and Healthcare. Occasionally dabble into graphic designs and video production for recreational fun.</p>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+          <p class="text-adjust">
+            Occasionally dabble into graphic designs and video production for recreational fun.</p>
         </div>
 
         <div class="row no-gutters">
