--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -67,7 +67,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-md bx-book-content"></i> <span>Portfolio</span></a></li>
           <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-md bx-envelope"></i> <span>Contact</span></a></li>
-          <li><a href="blog.html" class="nav-link"><i class="bx bx-md bx-book-open"></i> <span>Blog</span></a></li>
+          <li><a href="https://jackleejm.github.io/blog" class="nav-link"><i class="bx bx-md bx-book-open"></i> <span>Blog</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
