Update professional experience

--- a/index.html
+++ b/index.html
@@ -583,8 +583,21 @@
               <hr>
 
               <div class="resume-item mt-4">
+                <h4>Data Scientist</h4>
+                <h5>February 2022 - Present</h5>
+                <p><em>Kuala Lumpur, Malaysia</em></p>
+                <ul>
+                  <li>Developing a knowledge graph-oriented platform to deliver personalized insights to healthcare professionals for prescribing therapeutics 
+                      and precise diet plans to patients/consumers.</li>
+                </ul>
+                <h6><strong>Languages, Platforms, Tools Used</strong></h6>
+                <p>Python, SPARQL, CQL, Bash, VSCode, Blazegraph, Neo4j, Amazon AWS, JupyterLab, Tensorflow, PyTorch, Pandas, Numpy.</p>
+                &nbsp;
+              </div>
+
+              <div class="resume-item">
                 <h4>Data Science Consultant (Freelance)</h4>
-                <h5>March 2021 - Present</h5>
+                <h5>March 2021 - February 2022</h5>
                 <p><em>Kuala Lumpur, Malaysia</em></p>
                 <ul>
                   <li>Conduct workshops to educate clients and colleagues on best practices in operationalising ML projects.</li>
