Update professional experience

--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
               <div class="resume-item mt-4">
                 <h4>Data Scientist</h4>
                 <h5>February 2022 - Present</h5>
-                <p><em>Kuala Lumpur, Malaysia</em></p>
+                <p><em>AMILI Pte Ltd, Singapore</em></p>
                 <ul>
                   <li>Developing a knowledge graph-oriented platform to deliver personalized insights to healthcare professionals for prescribing therapeutics 
                       and precise diet plans to patients/consumers.</li>
