--- a/index.html
+++ b/index.html
@@ -587,11 +587,14 @@
                 <h5>February 2022 - Present</h5>
                 <p><em>AMILI Pte Ltd, Singapore</em></p>
                 <ul>
-                  <li>Developing a knowledge graph-oriented platform to deliver personalized insights to healthcare professionals for prescribing therapeutics 
-                      and precise diet plans to patients/consumers.</li>
+                  <li>Developed core components of the knowledge graph-oriented (KG) platform to deliver personalized insights 
+                    to healthcare professionals for prescribing therapeutics and precise diet plans to consumers.</li>
+                  <li>Collaborated with DevOps and Data Engineers to build a scalable & robust MLOps system infrastructure for facilitating data and ML pipelines.</li>
+                  <li>Built solutions with commercial and open-source LLMs (i.e. ChatGPT, Zephyr, Llama, etc) for data cleansing/validation, and classification tasks.</li>
+                  <li>Lead a team of interns from industry placement programmes to build NLP and Computer Vision capabilities of the KG platform.</li>
                 </ul>
                 <h6><strong>Languages, Platforms, Tools Used</strong></h6>
-                <p>Python, SPARQL, CQL, Bash, VSCode, Blazegraph, Neo4j, Amazon AWS, JupyterLab, Tensorflow, PyTorch, Pandas, Numpy.</p>
+                <p>Python, Bash, Cypher, VSCode, Neo4j, KNIME, Amazon AWS, Selenium, PyTest, JupyterLab, Tensorflow, PyTorch, SpaCy, Pandas, Scipy, Numpy, Numba.</p>
                 &nbsp;
               </div>
 
